--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title> Smart Rocket </title>
+    <script
+  src="http://code.jquery.com/jquery-3.3.1.slim.js"
+  integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA="
+  crossorigin="anonymous"></script>
     <script type="text/javascript" src="p5.js"></script>
-    <script type="text/javascript" src="sketch.js"></script>
     <style>
       * {
         padding: 0;
@@ -17,5 +20,16 @@
     </style>
   </head>
   <body>
+    <script type="text/javascript" src="sketch.js"></script>
+    <script>
+      $(document).ready(function(){
+        $(document).keypress(function(e){
+          if(game && e.which==SPACE){
+            gameHandler();
+            timeComment("SPACED out")
+          }
+        });
+      });
+    </script>
  </body>
 </html>
