--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   src="http://code.jquery.com/jquery-3.3.1.slim.js"
   integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA="
   crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
     <script type="text/javascript" src="p5.js"></script>
     <style>
       * {
@@ -20,6 +21,7 @@
     </style>
   </head>
   <body>
+    <script type="text/javascript" src="neuralNetwork.js"></script>
     <script type="text/javascript" src="sketch.js"></script>
     <script>
       $(document).ready(function(){
